// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. landscape default modal 1`] = `
<View>
  <Modal>
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <SafeAreaView
        style={
          Object {
            "backgroundColor": "#000000",
            "flex": 0,
          }
        }
      />
      <View
        style={
          Object {
            "padding": 20,
            "position": "absolute",
            "top": 0,
            "zIndex": 2,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "borderRadius": 30,
              "height": 30,
              "justifyContent": "center",
              "width": 30,
            }
          }
        >
          <Image
            style={
              Object {
                "height": "85%",
                "width": "85%",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      >
        <ImageZoomView />
      </SafeAreaView>
    </View>
  </Modal>
  <View>
    <View
      style={
        Object {
          "aspectRatio": 2,
          "backgroundColor": "#EDEDED",
          "borderRadius": 0,
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <Image
        style={
          Object {
            "borderRadius": 0,
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "position": "absolute",
            "resizeMode": "center",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`2. portrait default modal 1`] = `
<View>
  <Modal>
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <SafeAreaView
        style={
          Object {
            "backgroundColor": "#000000",
            "flex": 0,
          }
        }
      />
      <View
        style={
          Object {
            "padding": 20,
            "position": "absolute",
            "top": 0,
            "zIndex": 2,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "borderRadius": 30,
              "height": 30,
              "justifyContent": "center",
              "width": 30,
            }
          }
        >
          <Image
            style={
              Object {
                "height": "85%",
                "width": "85%",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      >
        <ImageZoomView />
      </SafeAreaView>
    </View>
  </Modal>
  <View>
    <View
      style={
        Object {
          "aspectRatio": 0.5,
          "backgroundColor": "#EDEDED",
          "borderRadius": 0,
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <Image
        style={
          Object {
            "borderRadius": 0,
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "position": "absolute",
            "resizeMode": "center",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`3. tablet landscape default modal 1`] = `
<View>
  <Modal>
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <SafeAreaView
        style={
          Object {
            "backgroundColor": "#000000",
            "flex": 0,
          }
        }
      />
      <View
        style={
          Object {
            "padding": 20,
            "position": "absolute",
            "top": 0,
            "zIndex": 2,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "borderRadius": 30,
              "height": 30,
              "justifyContent": "center",
              "width": 30,
            }
          }
        >
          <Image
            style={
              Object {
                "height": "85%",
                "width": "85%",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      >
        <ImageZoomView />
      </SafeAreaView>
    </View>
  </Modal>
  <View>
    <View
      style={
        Object {
          "aspectRatio": 2,
          "backgroundColor": "#EDEDED",
          "borderRadius": 0,
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <Image
        style={
          Object {
            "borderRadius": 0,
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "position": "absolute",
            "resizeMode": "center",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`4. tablet portrait default modal 1`] = `
<View>
  <Modal>
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <SafeAreaView
        style={
          Object {
            "backgroundColor": "#000000",
            "flex": 0,
          }
        }
      />
      <View
        style={
          Object {
            "padding": 20,
            "position": "absolute",
            "top": 0,
            "zIndex": 2,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "borderRadius": 30,
              "height": 30,
              "justifyContent": "center",
              "width": 30,
            }
          }
        >
          <Image
            style={
              Object {
                "height": "85%",
                "width": "85%",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      >
        <ImageZoomView />
      </SafeAreaView>
    </View>
  </Modal>
  <View>
    <View
      style={
        Object {
          "aspectRatio": 0.5,
          "backgroundColor": "#EDEDED",
          "borderRadius": 0,
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <Image
        style={
          Object {
            "borderRadius": 0,
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "position": "absolute",
            "resizeMode": "center",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;
